# faas-scheduling-benchmark

./: .gitignore  README.md
computer-vision/: README.md
computer-vision/classify-image/: template.yml
computer-vision/detect-object/: template.yml
log-processing/: Makefile  README.md
log-processing/anonymize-log/code/: Cargo.toml
log-processing/anonymize-log/code/src/: lib.rs
log-processing/anonymize-log/func/: Makefile  template.yml
log-processing/filter-log/code/: Cargo.toml
log-processing/filter-log/code/src/: lib.rs
log-processing/filter-log/func/: Makefile  template.yml
log-processing/runtime/: README.md  build.Dockerfile
log-processing/runtime/bootstrap/: Cargo.toml
log-processing/runtime/bootstrap/.cargo/: config.toml
log-processing/runtime/bootstrap/src/: main.rs
media-processing/: README.md  template.yml
media-processing/convert-audio/: index.py
media-processing/get-media-meta/: index.py
smart-manufacturing/: README.md  build.Dockerfile  create_tb.sql  runtime.Dockerfile
smart-manufacturing/detect-anomaly/: CMakeLists.txt  function.hpp  main.cpp  template.yaml
smart-manufacturing/ingest-data/: CMakeLists.txt  Dockerfile  function.hpp  template.yaml
smart-parking/: README.md
smart-parking/query-vacancy/: template.yml
smart-parking/query-vacancy/code/: handler.js  index.js  package.json
smart-parking/reserve-spot/: template.yml
smart-parking/reserve-spot/code/: handler.js  index.js  package.json
